--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -52,6 +52,11 @@
                         <section class="mb-5">
                             <p class="fs-5 mb-4">{{ post.content }}</p>
                         </section>
+
+                        {% if post.file_upload %}
+                            <a href="{{ post.file_upload.url }}" class="btn btn-outline-dark" download>Download: ■ {{ post.get_file_name }}</a>
+                        {% endif %}
+                        <hr>
                     </article>
                     <!-- Comments section-->
                     <section class="mb-5">
