--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -39,6 +39,7 @@
                         <header class="mb-4">
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
+                            <h5 class="text-muted">{{ post.hook_text }}</h5>
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by 작성자명</div>
                         </header>
@@ -46,7 +47,7 @@
                         {% if post.head_image %}
                         <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" /></figure>
                         {% else %}
-                            <img class="img-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image">
+                            <figure class="mb-4"><img class="img-fluid rounded" src="https://picsum.photos/seed/{{ post.id }}/800/200" alt="random_image"></figure>
                         {% endif %}
                         <!-- Post content-->
                         <section class="mb-5">
