--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -90,8 +90,11 @@
                         {% endif %}
                         <div class="card-body">
                             <div class="small text-muted">{{ p.created_at }}</div>
+                            {% if p.hook_text %}
+                                <h5 class="text-muted">{{ p.hook_text }}</h5>
+                            {% endif %}
                             <h2 class="card-title h4">{{ p.title }}</h2>
-                            <p class="card-text">{{ p.content }}</p>
+                            <p class="card-text">{{ p.content | truncatewords:45 }}</p>
                             <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a>
                         </div>
                     </div>
