--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -9,7 +9,7 @@
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
                             <h5 class="text-muted">{{ post.hook_text }}</h5>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by 작성자명</div>
+                            <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by <a href="#">{{ post.author | upper }}</a> </div>
                         <!-- Preview image figure-->
                         {% if post.head_image %}
                         <figure class="mb-4"><img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{ post.title }} head_image" /></figure>
