--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,7 +14,7 @@
                                 <img class="card-img-top" src="https://picsum.photos/seed/{{ p.id }}/800/200" alt="random_image">
                             {% endif %}
                             <div class="card-body">
-                                <div class="small text-muted">{{ p.created_at }}</div>
+                                <div class="small text-muted">Posted on {{ p.created_at }} by <a href="#">{{ p.author | upper }}</a> </div>
                                 {% if p.hook_text %}
                                     <h5 class="text-muted">{{ p.hook_text }}</h5>
                                 {% endif %}
