--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,7 +19,7 @@
 
                     <!-- Search widget-->
                     <div class="card mb-4">
-                        <div class="card-header">Search</div>
+                        <h5 class="card-header">Search</h5>
                         <div class="card-body">
                             <div class="input-group">
                                 <input class="form-control" type="text" placeholder="Enter search term..." aria-label="Enter search term..." aria-describedby="button-search" />
@@ -30,17 +30,17 @@
 
                     <!-- Categories widget-->
                     <div class="card mb-4" id="categories-card">
-                        <div class="card-header">Categories</div>
-                        <div class="card-body">
+                        <h5 class="card-header">Categories</h5>
+                        <div class="card-body ms-5">
                             <div class="row">
-                                    <ul>
+                                    <ul class="list-group">
                                         {% for category in categories %}
                                         <li>
                                             <a href="{{ category.get_absolute_url }}">{{ category }} ({{ category.post_set.count }})</a>
                                         </li>
                                         {% endfor %}
                                         <li>
-                                            <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count}})</a>
+                                            <a href="/blog/category/no_category/">미분류 ({{ no_category_post_count }})</a>
                                         </li>
                                     </ul>
                             </div>
