--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,11 @@
 
 {% block main_area %}
     <div id="post-area">
+                        {% if post.category %}
+                            <span class="badge badge-secondary float-end">{{ post.category }}</span>
+                        {% else %}
+                            <span class="badge badge-secondary float-end">미분류</span>
+                        {% endif %}
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
                             <h5 class="text-muted">{{ post.hook_text }}</h5>
                             <!-- Post meta content-->
