--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -27,9 +27,8 @@
                         </section>
 
                         {% if post.tags.exists %}
-                            <i class="fas fa-tags"></i>
                             {% for tag in post.tags.iterator %}
-                                <a href="{{ tag.get_absolute_url }}"><span class="badge badge-pill badge-light">{{ tag }}</span></a>
+                                <a href="{{ tag.get_absolute_url }}"><span class="badge bg-secondary">{{ tag }}</span></a>
                             {% endfor %}
                             <br/>
                             <br/>
