--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -13,6 +13,9 @@
                         {% endif %}
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
                             <h5 class="text-muted">{{ post.hook_text }}</h5>
+                        {% if user.is_authenticated and user == post.author %}
+                            <a class="btn btn-info btn-sm float-end" href="/blog/update_post/{{ post.pk }}/" role="button">Edit Post</a>
+                        {% endif %}
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at }} by <a href="#">{{ post.author | upper }}</a> </div>
                         <!-- Preview image figure-->
