--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -1,3 +1,5 @@
+{% load socialaccount %}
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
               <a class="navbar-brand" href="/">Do It Django</a>
@@ -15,23 +17,25 @@
                   <li class="nav-item">
                     <a class="nav-link" href="/about_me/">About Me</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
+
                 </ul>
                 <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{ user.username }}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/accounts/logout/">Log Out</a>
+                        </div>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">
                             Log In
                         </a>
                     </li>
+                    {% endif %}
                 </ul>
               </div>
             </div>
@@ -50,15 +54,15 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="d-grid col-6">
-                                <button type="button" class="btn btn-outline-dark btn-sm">Log in with Google</button>
+                                <a role="button" class="btn btn-outline-dark btn-sm" href="{% provider_login_url 'google' %}">Log in with Google</a>
                             </div>
                             <div class="d-grid col-6">
-                                <button type="button" class="btn btn-outline-dark btn-block btn-sm">Log in with E-mail</button>
+                                <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="/accounts/login/">Log in with Username</a>
                             </div>
                         </div>
                         <div class="row">
                             <div class="d-grid col-6">
-                                <button type="button" class="btn btn-outline-dark btn-sm">Log in with E-mail</button>
+                                <a role="button" class="btn btn-outline-dark btn-sm" href="/accounts/signup/">Sign Up with E-mail</a>
                             </div>
                         </div>
                     </div>
