--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %}
-
+{% load crispy_forms_tags %}
 {% block head_title %}
     {{ post.title }} - Blog
 {% endblock %}
@@ -50,12 +50,19 @@
                             <h5 class="card-header">Leave a Comment:</h5>
                             <div class="card-body">
                                 <!-- Comment form-->
-                                <form class="mb-4">
-                                    <div class="form-group">
-                                        <textarea class="form-control" rows="3"></textarea>
+                                {% if user.is_authenticated %}
+                                    <form id="comment-form" method="POST" action="{{ post.get_absolute_url }}new_comment/">
+                                        {% csrf_token %}
+                                        <div class="form-group">
+                                            {{ comment_form | crispy }}
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                    </form>
+                                {% else %}
+                                    <div class="d-grid">
+                                        <a role="button" class="btn btn-outline-dark btn-block btn-sm" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Log in and leave a comment</a>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
+                                {% endif %}
                             </div>
                         </div>
                     </section>
