--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -71,11 +71,18 @@
             {% for comment in post.comment_set.iterator %}
             <!-- Single Comment -->
             <div class="media mb-5" id="comment-{{ comment.pk }}">
-                <img class="d-fles me-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+                <img class="d-flex me-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                 <div class="media-body">
-                    <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small>
-                    </h5>
+                    {% if user.is_authenticated and comment.author == user %}
+                        <div class="float-end">
+                            <a role="button" class="btn btn-sm btn-info" id="comment-{{ comment.pk }}-update-btn" href="/blog/update_comment/{{ comment.pk }}/">edit</a>
+                        </div>
+                    {% endif %}
+                    <h5 class="mt-0">{{ comment.author.username }} &nbsp;&nbsp;<small class="text-muted">{{ comment.created_at }}</small></h5>
                     <p>{{ comment.content | linebreaks }}</p>
+                    {% if comment.created_at != comment.modified_at %}
+                        <p class="text-muted float-end"><small>Updated: {{ comment.modified_at}}</small></p>
+                    {% endif %}
                 </div>
             </div>
             {% endfor %}
